Revision du code dans la globalité j'ai revu les features de notation et d'amitié